fix: fix broken left slider button on mobile; style: change background color on "pets" page; refactor: change folders structure inside the scss directory feat: create pagination functionality with pseudorandom cards generation on "pets" page; feat: add shadow-overlay to the page when  mobile menu is opened;

--- a/shelter/scss/base/_base.scss
+++ b/shelter/scss/base/_base.scss
@@ -7,11 +7,30 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  
   font-family: $primary-font-family;
   font-size: 15px;
-  
+
   &.scroll-lock {
     overflow: hidden;
+  }
+}
+
+.body-overlay {
+  
+  &.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 15;
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
